--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,8 +1,8 @@
-name: Docker Image CI
+name: Deploy to Staging
+
 on:
   push:
-    tags:
-      - "*"
+    branches: [ staging ]
   workflow_dispatch:
 
 jobs:
