--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,9 +1,8 @@
-name: Release X-UI
+name: new release 
 
 on:
   push:
-    tags:
-      - "*"
+    branches: [ staging ]
   workflow_dispatch:
 
 jobs:
